2001-10-11

	* ByMaintainer.xsl: support for sorting classnames
	* ByNamespace.xsl: support for sorting classnames, mailto href on
	  maintainer
	  
Tue Sep 25 19:03:52 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* class.xml: updates.

2001-09-14  Dick Porter  <dick@ximian.com>

	* class.xml: Added System.Threading classes

	* maintainers.xml: Added myself

2001-07-17  Sean MacIsaac  <macisaac@ximian.com>

	* ByNamespace.xsl: removed bug for improper handling of namespace.
	eg System.Collections.Blah was showing up in System list.

2001-07-16  Sean MacIsaac  <macisaac@ximian.com>

	* ByNamespace.xsl: Needed by ByNamespace.cs.

	* ByNamespace.cs: Generates html by namespace..

	* ByMaintainer.xsl: Needed by ByMaintainer.cs.

	* ByMaintainer.cs: Generates html by maintainer.

	* class.xml: Class maintainers go here.
	
	* maintainers.xml: Only maintaining email/name pairs here.

	* compare-assembly.cs: Started refactoring to give what Migee
	wants.