@@ -39,5 +39,6 @@
     <person name="Wictor Wilen" email="wictor@iBizkit.se"/>
     <person name="Thomas Neidhart" email="tome@sbox.tugraz.at"/>
     <person name="Martin Weindel" email="martin.weindel@t-online.de"/>
+	<person name="Daniel Weber" email="daniel-weber@austin.rr.com"/>
 </maintainers>
 
